--- a/README.md.jinja
+++ b/README.md.jinja
@@ -21,7 +21,7 @@ Overall TILs: {{ tils }}
 ### {{ category.name }}
 
 {% for topic in category.topics %}
-- [{{ topic.name }}]({{ topic.link }}) {% if topic.createdDateTime is defined %}- {{ topic.createdDateTime }}{% endif %}
+- [{{ topic.name }}]({{ topic.link }}) {% if topic.createdDateTime is defined and topic.createdDateTime != None %}- {{ topic.createdDateTime }}{% endif %}
 {% endfor %}
 
 {% endfor %}
