Fixed a bug where parsing of topics wouldn't show all md files under new categories

--- a/README.md.jinja
+++ b/README.md.jinja
@@ -23,7 +23,7 @@ Overall TILs: {{ tils }}
 ### {{ category.name }}
 
 {% for topic in category.topics %}
-- [{{ topic.name }}]({{ topic.link }}) {% if topic.createdDateTime is defined and topic.createdDateTime != None %}- {{ topic.createdDateTime }}{% endif %}
+* [{{ topic.name }}]({{ topic.link }}) {% if topic.createdDateTime is defined and topic.createdDateTime != None %}- {{ topic.createdDateTime }}{% endif %}  
 {% endfor %}
 
 {% endfor %}
